# Iceberg-Order-Prediction-Algorithm-Quantitative-Trading-with-ML

./: .gitattributes  .gitignore  ActiveIceberg.java  CNAME  Dockerfile  LightGBM_hpo_report.md  Logistic Regression_hpo_report.md  Logistic_Regression_hpo_report.md  README.md  Random Forest_hpo_report.md  Random_Forest_hpo_report.md  Untitled.md  XGBoost_hpo_report.md  build-components.mjs  custom.css  fix-components.js  hyperparameter-optimization-whitepaper.md  iceberg-prediction-whitepaper-v2.md  iceberg-prediction-whitepaper.html  iceberg-prediction-whitepaper.md  include-html.mjs  index.md  instructions for claude.md  myst.yml  package-lock.json  package.json  plot_slice.html  pyproject.toml  references.yml  remove_large_files.sh  requirements.txt
.binder/: Dockerfile  apt.txt  postBuild  postBuild.bk  pyproject.toml  requirements.txt
.css/: component-iframes.css
.github/workflows/: deploy-gh-pages.yml  publish-single-markdown-github-pages.yml  single-md-github-pages.yml  sync-readme.yml  test-deploy.yml
.virtual_documents/src/neptune-optuna-hpo/: optuna_plot_exporter.ipynb  refactor_optuna_data.ipynb
_components/: FeatureEngineeringVisual.html  FeatureImportanceDiagram.html  ModelArchitecture.html  ModelComparisonDiagram.html  ModelResults.html  TimeSeriesCVDiagram.html
_references/hyperparameter-tuning/LightGBM/: lightgbm_plot_contour.html  lightgbm_plot_edf.html  lightgbm_plot_optimization_history.html  lightgbm_plot_parallel_coordinate.html  lightgbm_plot_param_importances.html  lightgbm_plot_rank.html  lightgbm_plot_slice.html
_references/hyperparameter-tuning/LogisticRegression/: logistic_regression_plot_contour.html  logistic_regression_plot_edf.html  logistic_regression_plot_optimization_history.html  logistic_regression_plot_parallel_coordinate.html  logistic_regression_plot_param_importances.html  logistic_regression_plot_rank.html  logistic_regression_plot_slice.html
_references/hyperparameter-tuning/RandomForest/: random_forest_plot_contour.html  random_forest_plot_edf.html  random_forest_plot_optimization_history.html  random_forest_plot_parallel_coordinate.html  random_forest_plot_param_importances.html  random_forest_plot_rank.html  random_forest_plot_slice.html
_references/hyperparameter-tuning/XGBoost/: xgboost_plot_contour.html  xgboost_plot_edf.html  xgboost_plot_optimization_history.html  xgboost_plot_parallel_coordinate.html  xgboost_plot_param_importances.html  xgboost_plot_rank.html  xgboost_plot_slice.html
assets/: gauntlet-md-template.html
components/common-js/: FeatureEngineeringVisual.js  FeatureImportanceDiagram.js  ModelArchitecture.js  ModelComparisonDiagram.js  ModelResults.js  TimeSeriesCVDiagram.js
components/static-html/: FeatureEngineeringVisual.html  ModelArchitecture.html  ModelComparisonDiagram.html  ModelResults.html  TimeSeriesCVDiagram.html
data/: IcebergSimulationResult.yaml  IcebergUpdateMessageTypes.yaml
data/hyperparameter-optimization/: Dummy_estimator_params.json  study.db
data/hyperparameter-optimization/LightGBM/: LightGBM_estimator_params.json  best_trial.json  trials.csv
data/hyperparameter-optimization/LightGBM/visualizations/: plot_contour.html  plot_edf.html  plot_optimization_history.html  plot_parallel_coordinate.html  plot_param_importances.html
data/hyperparameter-optimization/Logistic Regression/: best_trial.json  trials.csv
data/hyperparameter-optimization/Logistic Regression/visualizations/: plot_contour.html  plot_edf.html  plot_optimization_history.html  plot_parallel_coordinate.html  plot_param_importances.html  plot_slice.html
data/hyperparameter-optimization/LogisticRegression/: Logistic Regression_estimator_params.json
data/hyperparameter-optimization/Random Forest/: Random Forest_estimator_params.json
data/hyperparameter-optimization/Random Forest/visualizations/: plot_contour.html  plot_edf.html  plot_optimization_history.html  plot_parallel_coordinate.html  plot_param_importances.html  plot_slice.html
data/hyperparameter-optimization/RandomForest/: best_trial.json  trials.csv
data/hyperparameter-optimization/XGBoost/: XGBoost_estimator_params.json  best_trial.json  trials.csv
data/hyperparameter-optimization/XGBoost/visualizations/: plot_contour.html  plot_edf.html  plot_optimization_history.html  plot_parallel_coordinate.html  plot_param_importances.html  plot_slice.html
hyperparameter_optimisation/: LightGBM_hpo_report.md  Logistic Regression_hpo_report.md
scripts/: build_myst_local.sh  html-autosize.js  iframe-resizer.js  pre-render.js  render-and-screenshot.js  start_local_jupyter_server.sh
src/: ShapleyAnalysis.ipynb  machinelearning_final_modified.py  sxm_market_simulator.py
src/neptune-ml-hyperopt-loader/: neptune loader.ipynb  neptune_loader_v2.ipynb
src/neptune-optuna-hpo/: bulk_downloader.ipynb  optuna_plot_exporter.ipynb  optuna_plot_exporter.md  refactor_optuna_data.ipynb  refactor_optuna_data.ipynb.bak
