[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
prerelease-mode = "allow"
dependencies = [
    "aiofiles",
    "aiohttp",
    "aiosignal",
    "aiosqlite",
    "alembic",
    "alpaca-py",
    "anyio",
    "arcticdb",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "asttokens",
    "async-lru",
    "asyncio",
    "attrs",
    "babel",
    "backcall",
    "beautifulsoup4",
    "black",
    "bleach",
    "blosc2",
    "bokeh",
    "boto3",
    "botocore",
    "bottleneck",
    "bravado",
    "bravado-core",
    "cachelib",
    "catboost",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "cloudpickle",
    "colorama",
    "colorlog",
    "comm",
    "connectorx",
    "contourpy",
    "cryptography",
    "cycler",
    "cython",
    "dask",
    "dateparser",
    "debugpy",
    "decorator",
    "defusedxml",
    "dill",
    "distlib",
    "distributed",
    "docker",
    "docstring-to-markdown",
    "entrypoints",
    "enum-tools",
    "exchange-calendars",
    "executing",
    "fastjsonschema",
    "fastparquet",
    "fonttools",
    "fqdn",
    "fsspec",
    "future",
    "gitdb",
    "gitpython",
    "graphviz",
    "greenlet",
    "gunicorn",
    "h11",
    "h2",
    "h5py",
    "hpack",
    "html5lib",
    "httpcore",
    "httpx",
    "hyperframe",
    "idna",
    "imgkit",
    "importlib-metadata",
    "importlib-resources",
    "in-place",
    "ipykernel",
    "ipympl",
    "ipython",
    "ipython-genutils",
    "ipython-pygments-lexers",
    "ipython-suggestions",
    "ipywidgets",
    "isoduration",
    "isort",
    "jedi",
    "jinja2",
    "jmespath",
    "joblib",
    "json-lsp",
    "json5",
    "jsonpointer",
    "jsonref",
    "jsonschema",
    "jsonschema-specifications",
    "kiwisolver",
    "latex",
    "lightgbm",
    "lsp",
    "lxml",
    "mako",
    "markdown",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mistune",
    "monotonic",
    "msgpack",
    "multitasking",
    "mypy-extensions",
    "narwhals",
    "nbclassic",
    "nbclient",
    "notebook",
    "nbconvert",
    "nbformat",
    "neptune[lightgbm]",
    "neptune-api",
    "neptune-fetcher",
    "neptune-lightgbm",
    "neptune-optuna",
    "neptune-sklearn",
    "neptune-xgboost",
    "nest-asyncio",
    "notebook",
    "notebook-shim",
    "numba",
    "numexpr",
    "numpy",
    "nvidia-nccl-cu12",
    "oauthlib",
    "openpyxl",
    "optuna",
    "optuna-dashboard",
    "optuna-fast-fanova",
    "optuna-integration",
    "orjson",
    "overrides",
    "packaging",
    "pandas[computation,performance]",
    "pandoc",
    "pandocfilters",
    "parallel-ssh",
    "parso",
    "pathlib2",
    "pathspec",
    "pendulum==2.0.2",
    "pexpect",
    "pillow",
    "pip",
    "platformdirs",
    "plotly",
    "pluggy",
    "polling2",
    "prometheus-client",
    "prompt-toolkit",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure-eval",
    "pyarrow",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydevd-pycharm",
    "pygments",
    "pyjwt",
    "pymysql",
    "pyparsing",
    "pysmartdl",
    "python-dateutil",
    "python-dotenv",
    "python-json-logger",
    "python-lsp-jsonrpc",
    "python-lsp-pylama",
    "python-lsp-server[all]",
    "pytz",
    "pyyaml",
    "pyzmq",
    "redis",
    "referencing",
    "regex",
    "requests",
    "requests-oauthlib",
    "rfc3339-validator",
    "rfc3986-validator",
    "rfpimp",
    "rich",
    "rpds-py",
    "rsa",
    "s3fs",
    "s3transfer",
    "scikit-learn",
    "scikit-plot",
    "scipy",
    "send2trash",
    "setuptools",
    "simplejson",
    "six",
    "smmap",
    "sniffio",
    "sortedcontainers",
    "soupsieve",
    "sqlalchemy",
    "ssh2-python",
    "stack-data",
    "statsmodels",
    "stratx",
    "swagger-spec-validator",
    "tables",
    "tabulate",
    "tblib",
    "tenacity",
    "terminado",
    "threadpoolctl",
    "tinycss2",
    "tornado",
    "tqdm",
    "traitlets",
    "tsflex",
    "types-python-dateutil",
    "typing-extensions",
    "tzdata",
    "ujson",
    "uri-template",
    "urllib3",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "websockets",
    "widgetsnbextension",
    "xgboost",
    "xlrd",
    "xlsxwriter",
    "xyzservices",
    "y-py",
    "yaml-lsp",
    "yellowbrick",
    "yfinance[nospam]",
    "ypy-websocket",
    "zipp",
    "lolviz",
    "bintrees",
    "optuna-distributed",
    "shapash[report]",
    "faust-streaming[debug,eventlet,fast,redis,rocksdb,uvloop,yaml]",
    "chartpy",
    "bqplot",
    "shap",
    "cysimdjson",
    "feature-engine",
    "deepchecks-client",
    "deepchecks-installer",
    "mystmd",
    "python-lsp-black",
    "python-lsp-isort",
    "pylsp-rope",
    "python-lsp-ruff>=2.2.2",
    "jupyterlab>=4.4.0",
    "anywidget",
    "jupyter-server>=2.15.0",
    "dtreeviz[tensorflow-decision-trees]>=2.2.2",
    "dockerfile-kernel>=0.1.2",
    "iniconfig>=2.1.0",
    "ipylab>=1.0.0",
    "jlab-enhanced-launcher>=4.0.1",
    "jupyter-archive>=3.4.0",
    "jupyter-resource-usage>=1.1.1",
    "jupyter-server-fileid>=0.9.3",
    "jupyter-server-mathjax>=0.2.6",
    "jupyter-server-ydoc>=2.0.1",
    "jupyter-ydoc>=3.0.4",
    "jupyterlab-git>=0.51.1",
    "jupyterlab-github>=4.0.0",
    "jupyterlab-image-editor>=0.1.0",
    "jupyterlab-latex>=4.3.0",
    "jupyterlab-link-share>=0.3.0",
    "jupyterlab-lsp>=5.1.0",
    "jupyterlab-mathjax2>=4.0.0",
    "jupyterlab-myst>=2.4.2",
    "jupyterlab-night>=0.5.1",
    "jupyterlab-plugin-playground>=0.4.0",
    "jupyterlab-search-replace>=1.1.0",
    "lckr-jupyterlab-variableinspector>=3.2.4",
    "nbdime>=4.0.2",
    "prettytable>=3.16.0",
    "pytest>=8.3.5",
    "jupytext>=1.17.0",
    "kaleido<=0.2.1",
    "jupyterlite-core>=0.5.1",
    "jupyterlite-xeus>=3.1.7",
    "jupyterlite-pyodide-kernel>=0.5.2",
    "repo2jupyterlite>=0.2",
    "thebe>=0.0.4.6",
    "jupyter-server-proxy>=4.4.0",
    "jupyterlab-tour>=4.0.1",
    "ipyleaflet>=0.19.2",
    "jupyterlab-filesystem-access>=0.6.0",
    "jupyterlab-open-url-parameter>=0.3.0",
    "jupyterlab-webrtc-docprovider>=0.1.1",
    "jupyter-shared-drive>=0.2.1",
]
